# Commitlabs-Contracts

./: Cargo.toml  README.md
contracts/allocation_logic/src/: benchmarks.rs
contracts/attestation_engine/src/: benchmarks.rs  lib.rs  tests.rs
contracts/attestation_engine/test_snapshots/tests/: test_initialize.1.json  test_record_fees.1.json  test_verify_compliance.1.json
contracts/commitment_core/src/: benchmarks.rs  lib.rs  tests.rs
contracts/commitment_core/test_snapshots/tests/: test_create_commitment.1.json  test_early_exit.1.json  test_initialize.1.json  test_settle.1.json  test_update_value.1.json  test_update_value_event.1.json
contracts/commitment_marketplace/src/: lib.rs  tests.rs
contracts/commitment_nft/src/: benchmarks.rs  lib.rs  tests.rs
contracts/commitment_nft/test_snapshots/tests/: test_get_metadata.1.json  test_get_metadata_nonexistent_token.1.json  test_is_active.1.json  test_is_active_nonexistent_token.1.json  test_mint.1.json  test_mint_multiple.1.json  (+5 more)
contracts/shared_utils/src/: lib.rs  pausable.rs
docs/: backend-changelog.md
tests/integration/: Cargo.toml  cross_contract_tests.rs  error_tests.rs  harness.rs
tests/integration/src/: lib.rs
tests/integration/test_snapshots/: test_commitment_value_update_with_health_tracking.1.json  test_compliance_verification_flow.1.json  test_create_commitment_with_attestation_flow.1.json  test_early_exit_flow_end_to_end.1.json  test_gas_batch_attestations.1.json  test_gas_multiple_operations.1.json  test_gas_single_commitment_creation.1.json  test_settlement_flow_end_to_end.1.json
